--- a/app/src/main/res/layout/item_recycleview2.xml
+++ b/app/src/main/res/layout/item_recycleview2.xml
@@ -9,7 +9,6 @@
         android:id="@+id/TextViewRecycleView2"
         android:layout_width="204dp"
         android:layout_height="43dp"
-        android:text="Nome: "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ratingBarRecycleView2" />
 
@@ -28,7 +27,26 @@
         android:layout_height="43dp"
         android:layout_marginEnd="4dp"
 
-        android:text="Telefone:"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ratingBarRecycleView2" />
+
+    <ImageButton
+        android:id="@+id/ItemBtEditar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:contentDescription="@string/BtEditar"
+        app:layout_constraintStart_toEndOf="@+id/ItemBtExcluir"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_edit" />
+
+    <ImageButton
+        android:id="@+id/ItemBtExcluir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/BtEditar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
