--- a/app/src/main/res/layout/activity_tela_pricipal.xml
+++ b/app/src/main/res/layout/activity_tela_pricipal.xml
@@ -69,4 +69,14 @@
         app:iconSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/Id_Bt_Editar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/BtEditar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSalvar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
